syntax = "proto3";

package user;

option go_package = "grpc-ddd-demo/api";

// 请求与响应消息
message UserRequest {
  int64 id = 1;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

// 用户服务定义
service UserService {
  rpc GetUser (UserRequest) returns (UserResponse){};
  rpc CreateUser (UserResponse) returns (UserResponse);
}
